# testtrim

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  build.rs  cliff.toml  clippy.toml  diesel.toml  flake.nix  renovate.json5  test.sh
.config/: nextest.toml  testtrim.toml
.forgejo/workflows/: artifacts.yaml  release.yaml  rust-check.yaml
.sqlx/: query-03ab5cad7674eabc0c54e0c4692caeb20f65228626c7f7bce237754953701596.json  query-04d660adf42a134492026639617ffda9dab66ead411020d1e14fdc0d52d4a5a3.json  query-189a547547ae1338aa3008f2f559042ebb3da3990d033adac3b5c0c93d083d0e.json  query-1a38270e3c69e3eefcda8d0672762434fdac945c9eca0ccc6bd8d9ee63c8215d.json  query-1b9710f9a8eacc4f2b5ac433e0c9f248d334d59dba5cc6192c594a2331856bad.json  query-2145189f1d4b4fbd73041f4094054009e7240d4094f2901b205e366d1862887b.json  query-277fc6b50ca8dc066840a146ad46d50f03fa0c5307a7ae6f4ab33a7884ba3e3b.json  query-2d256bf39edd994e5a072225c5e98e029a34531b49a5154da23227964a89291f.json  query-3889700bc815d1e81e552bdbded2423177f370d64b375fec20d7b7960820b99b.json  query-3e92df0229afa8d12de85d4e0b41b7845d2e5ef0ac0b1f3083e26635e587adfd.json  query-49d898602853e8a06cebb07c3f6a3e847d4568130ec4deb94cff173cabca7d72.json  query-531a92d62ba64a4493ae3d4f2c733f9f2d824f52399efd8cdeb6671d83b5b9a6.json  query-5bef7ad6665fd2d97993b1044e07c3d4d0e272813e5158a4e7d3d5a3a72f5ac1.json  query-62db8386ba7f0f96ff505d085720452af2d70b83ebf48a6ea5b9c213c4b6fbcd.json  query-677b8b5e97fc327f93ea7d6813373fe762c421791c0b33ebcb8f1e39100f6bcb.json  query-6f8676e92feab5cd66d71ceabfac9d3a98ea276ed373b179b41e5e187b29d628.json  query-7696292d34b4b8a492f1c9a7603ad5e7c918d3a3d25248ee66a1754570461489.json  query-78d4a96fcf05dbaeb217eaaf529173b9a545c47a834e73d00eb073946734b057.json  query-8c4e6d8530ddb09ffbcfde721d2553471eace017f89453095553ab45e3e97af2.json  query-9305aaf4561d9d013837639dcaa9da4430e04baad6fbeedc76e01bee1117bff5.json  query-930f81a91d2adbc53e6967e3ad20e6920fc5b334b16500c43442cd8813a6a6b4.json  query-937c79becde351033749b538d209f09240f8d031a0ea17064fcfa90887d33f52.json  query-9b947369d20e23a8df6df4b072576620fbe9c17ef8003136ff7dfebfe02f2078.json  query-9c010a337da5d2f0867a181800a31399db1c373ee7eb4c74110513583eb9729b.json  query-a6144f4aa2c4c795b7eeaccc10619fa01926bde238a528871cfecac06c07a724.json  query-b795fc3f5e888d86fa7ccb5e3802d057669c68568906ca37751d39781fdae69d.json  query-bd444501214ed21d0a7ae99df116d6c0c2727545e4ba12725c2340bc58ae09f9.json  query-e410022d96d25d12f1cc098e7ad8ed6534429314accc824d5946f03fce82bd72.json  query-e6383ea4f55d83c0b68aaa7d119709c1aaebc03c8dd28284c1ff895d6e21791c.json  query-f2a6192b7c4aaa1ce28c450ec3057b8c2f69750705d6ccaedacce2fb61477192.json  query-f68a28c96930c982df216dcca6fe9bdf494aa03e17144b64880569c6be4e05a2.json  query-fa4dfd7875b1f2fb1b66fc5fdc90d2965ce10b009f41d6524f861f3dde072948.json
docs/: schema.md  strace.md
migrations/2024-09-19-123429_base_schema/: down.sql  up.sql
migrations/2024-09-19-123429_rough_coverage_data/: down.sql  up.sql
migrations/2024-10-08-021828_refreshed_schema/: down.sql  up.sql
scripts/: generate-strace-multiproc-chdir.py  rust-git-analysis.sh  rust-scratchpad.sh  rust-test-runner.sh
src/: commit_coverage_data.rs  coverage_map.rs  db.rs  errors.rs  full_coverage_data.rs  git.rs  lib.rs  main.rs  models.rs  network.rs  rust_llvm.rs  schema.rs  scm.rs  scm_git.rs  subcommand.rs  timing_tracer.rs  util.rs
src/cmd/: cli.rs  get_test_identifiers.rs  mod.rs  run_tests.rs  simulate_history.rs
src/coverage/: commit_coverage_data.rs  db.rs  db_tests.rs  full_coverage_data.rs  mod.rs  postgres_sqlx.rs  sqlite_diesel.rs  tag.rs  testtrim_api.rs
src/nsncd/: mod.rs  protocol.rs
src/platform/: dotnet.rs  dotnet_cobertura.rs  golang.rs  mod.rs  rust.rs  rust_llvm.rs  util.rs
src/scm/: git.rs  mod.rs
src/server/: coverage_data.rs  mod.rs
src/sys_trace/: mod.rs  strace.rs  trace.rs
tests/: integration_test.rs  linearcommits_filecoverage_tests.rs  util.rs
tests/go_parse_examples/: embed.go
tests/linearcommits_filecoverage/: dotnet_test.rs  golang_test.rs  mod.rs  rust_test.rs
tests/rust_parse_examples/: sequences.rs
tests/test_data/: coverage.cobertura.xml.license  dotnet-coverage-specimen.sln  strace-connect.txt  strace-curl-google-with-nscd.strace.4085267  strace-curl-no-nscd.txt  (+5 more)
testtrim-cli/: Cargo.toml
testtrim-cli/src/: errors.rs  lib.rs  main.rs  network.rs  repo_config.rs  timing_tracer.rs  util.rs
testtrim-cli/src/cmd/: cli.rs  get_test_identifiers.rs  get_test_identifiers_ui.rs  mod.rs  run_tests.rs  run_tests_ui.rs  simulate_history.rs  simulate_history_ui.rs  ui.rs
testtrim-cli/src/coverage/: commit_coverage_data.rs  db_tests.rs  full_coverage_data.rs  mod.rs  postgres_sqlx.rs  sqlite_diesel.rs  testtrim_api.rs
testtrim-cli/src/nsncd/: mod.rs  protocol.rs
testtrim-cli/src/platform/: dotnet.rs  dotnet_cobertura.rs  golang.rs  javascript.rs  mod.rs  rust.rs  rust_llvm.rs  util.rs
testtrim-cli/src/scm/: git.rs  mod.rs
testtrim-cli/src/server/: coverage_data.rs  mod.rs
testtrim-cli/src/sys_trace/: mod.rs  trace.rs
testtrim-cli/src/sys_trace/strace/: funcs.rs  mod.rs  proc_synchronizer.rs  sequencer.rs  shmem.rs  tokenizer.rs
testtrim-cli/tests/: linearcommits_filecoverage_tests.rs  syscall_tracing.rs
testtrim-cli/tests/go_parse_examples/: file1.txt
testtrim-cli/tests/linearcommits_filecoverage/: dotnet_test.rs  golang_test.rs  javascript_test.rs  mod.rs  rust_test.rs
testtrim-cli/tests/test_data/: Factorial_Vec.txt  packages.lock.json  strace-curl-google-with-nscd.strace.4085268  strace-curl-google-without-nscd.strace.4085458  strace-multiproc-chdir.strace.4086638  strace-multiproc-chdir.strace.4086639  strace-multiproc-chdir.strace.4086641  strace-multiproc-chdir.strace.4086643
testtrim-ebpf-common/: Cargo.toml
testtrim-ebpf-program/: Cargo.toml  build.rs
testtrim-ebpf-program/src/: lib.rs  main.rs
testtrim-ebpf-tracing/: Cargo.toml  build.rs
testtrim-ebpf-tracing/src/: lib.rs  main.rs
testtrim-syscall-test-app/: Cargo.toml  test-file-1.txt
testtrim-syscall-test-app/src/: main.rs
(+16 files in other folders)
