# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "testtrim"
description = "Intelligently select automated tests to run via code coverage analysis"
version = "0.7.0"
edition = "2024"
authors = ["Mathieu Fenniak <mathieu@fenniak.net>"]

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.94"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
cargo_toml = "0.21.0"
cargo-lock = "10.0.1"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
csv = "1.3.1"
current_platform = "0.2.0"
dashmap = "6.1.0"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid", "time"] }
diesel_migrations = "2.2.0"
dns-protocol = "0.1.2"
enum_dispatch = "0.3.13"
glob = "0.3.1"
gomod-rs = "0.1.1"
ipnet = { version = "2.10.1", features = ["serde"] }
lazy_static = "1.5.0"
llvm_profparser = "0.7.0"
log = "0.4.22"
nix = { version = "^0.29.0", features = ["socket", "user"]}
nom = "7.1.3"
num_cpus = "1.16.0"
num-derive = "0.4.2"
num-traits = "^0.2"
quick-xml = { version = "0.37.1", features = ["serialize"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json", "zstd", "gzip"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde-map-to-array = { version = "1.1.1", features = ["std"] }
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "json", "time", "migrate"] }
tempdir = "0.3.7"
thiserror = "2.0.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
toml = "0.8.19"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
actix-test = "0.1.5"
named-lock = "0.4.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
