# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
    "testtrim-cli",
    "testtrim-ebpf-tracing",
    "testtrim-ebpf-program",
]
default-members = [
    "testtrim-cli",
    "testtrim-ebpf-tracing",
]
resolver = "3"

[workspace.dependencies]
actix-test = "0.1.5"
actix-web = "4.9.0"
anyhow = "1.0.94"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
cargo_toml = "0.21.0"
cargo-lock = "10.0.1"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
csv = "1.3.1"
current_platform = "0.2.0"
dashmap = "6.1.0"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid", "time"] }
diesel_migrations = "2.2.0"
dns-protocol = "0.1.2"
enum_dispatch = "0.3.13"
futures = "0.3.31"
glob = "0.3.1"
gomod-rs = "0.1.1"
ipnet = { version = "2.10.1", features = ["serde"] }
lazy_static = "1.5.0"
libc = { version = "0.2.159", default-features = false }
llvm_profparser = "0.7.0"
log = "0.4.22"
named-lock = "0.4.1"
nix = { version = "^0.29.0", features = ["socket", "user"]}
num_cpus = "1.16.0"
num-derive = "0.4.2"
num-traits = "^0.2"
quick-xml = { version = "0.37.1", features = ["serialize"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json", "zstd", "gzip"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde-map-to-array = { version = "1.1.1", features = ["std"] }
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "json", "time", "migrate"] }
tempdir = "0.3.7"
thiserror = "2.0.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
toml = "0.8.19"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
which = { version = "7.0.0", default-features = false }
winnow = "0.6"

# These dependencies aren't needed directly -- but they are required by the testtrim-ebpf-program cross-compile and if
# they aren't included here, then they won't be listed in Cargo.lock, and then they won't get into the nix build (which
# is restricted with the `cargoLock` setting).
compiler_builtins = "=0.1.140"
dlmalloc = "=0.2.7"
fortanix-sgx-abi = "=0.5.0"
getopts = "=0.2.21"
hermit-abi = "^0.4.0"
miniz_oxide = "=0.8.2"
r-efi = "=4.5.0"
r-efi-alloc = "=1.0.0"
unwinding = "=0.2.5"
