# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
    "testtrim-cli",
    "testtrim-syscall-test-app",
]
resolver = "3"

[workspace.dependencies]
actix-test = "0.1.5"
actix-web = "4.9.0"
anyhow = "1.0.94"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
cargo_toml = "0.22.0"
cargo-lock = "11.0.0"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
console = "0.16.0"
csv = "1.3.1"
current_platform = "0.2.0"
dashmap = "6.1.0"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid", "time"] }
diesel_migrations = "2.3.0"
dns-protocol = "0.1.2"
enum_dispatch = "0.3.13"
futures = "0.3.31"
glob = "0.3.1"
gomod-rs = "0.1.1"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
ipnet = { version = "2.10.1", features = ["serde"] }
lcov = "0.8.1"
llvm_profparser = "0.9.0"
log = "0.4.22"
named-lock = "0.4.1"
nix = { version = "^0.30.0", features = ["fs", "process", "socket", "user", "signal"] }
num_cpus = "1.16.0"
num_enum = "0.7.3"
num-derive = "0.4.2"
num-traits = "^0.2"
ouroboros = "0.18.5"
quick-xml = { version = "0.38.0", features = ["serialize"] }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json", "zstd", "gzip"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde-map-to-array = { version = "3.0.0", features = ["std"] }
shared_memory = "0.12.4"
shared-mem-queue = "0.4.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "json", "time", "migrate"] }
tempfile = "3.16.0"
thiserror = "2.0.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
toml = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
winnow = "0.7"
