# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "testtrim"
description = "Intelligently select automated tests to run via code coverage analysis"
version = "0.11.0"
edition = "2024"
authors = ["Mathieu Fenniak <mathieu@fenniak.net>"]
repository = "https://codeberg.org/testtrim/testtrim"
license = "GPL-3.0-or-later"
categories = ["development-tools::testing", "command-line-utilities"]
rust-version = "1.85" # pushed for async_closures stabilization

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-compression = { workspace = true }
cargo_toml = { workspace = true }
cargo-lock = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
console = { workspace = true }
csv = { workspace = true }
current_platform = { workspace = true }
dashmap = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dns-protocol = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
gomod-rs = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
ipnet = { workspace = true }
lazy_static = { workspace = true }
llvm_profparser = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
ouroboros = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-map-to-array = { workspace = true }
shared_memory = { workspace = true }
shared-mem-queue = { workspace = true }
simplelog = { workspace = true }
sqlx = { workspace = true }
tempdir = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
actix-test = { workspace = true }
named-lock = { workspace = true }
# This would be ideal if -Zbindeps was stabilized:
# testtrim-ebpf-program = { path = "../testtrim-ebpf-program", artifact = "bin" }
