# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "testtrim-ebpf-tracing"
version = "0.8.4"
edition = "2024"

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["process", "user"]}
simplelog = { workspace = true }
testtrim-ebpf-common = { path = "../testtrim-ebpf-common" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
testtrim-ebpf-program = { path = "../testtrim-ebpf-program" }

[[bin]]
name = "testtrim-ebpf-tracing"
path = "src/main.rs"
