# SPDX-FileCopyrightText: 2024 Mathieu Fenniak <mathieu@fenniak.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "testtrim-syscall-test-app"
version = "0.13.1"
edition = "2024"

[dependencies]
clap = { workspace = true }
dns-protocol = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
